--- a/csf_assessment_template/client/src/app/components/confirmation.component.html
+++ b/csf_assessment_template/client/src/app/components/confirmation.component.html
@@ -2,7 +2,7 @@
   <div class="col">
     <div class="fs-1 fw-bold text-primary">Order Placed</div>
     <div class="d-flex justify-content-end">
-      <button type="button" class="btn btn-secondary">Back</button>
+      <button type="button" class="btn btn-secondary" (click)="back()">Back</button>
     </div>
   </div>
 </div>
@@ -10,23 +10,23 @@
 <div class="row mt-2">
   <div class="col">
     <p> Your order details are below</p>
-    <table class="table table-striped">
+    <table class="table table-striped" *ngIf="result$ | async as result">
       <tbody>
         <tr>
           <td>Date:</td>
-          <td> <code>Friday, March 21 2025</code> </td>
+          <td> <code>{{result.timestamp}}</code> </td>
         </tr>
         <tr>
           <td>Order Id:</td>
-          <td> <code>abc123</code> </td>
+          <td> <code>{{result.orderId}}</code> </td>
         </tr>
         <tr>
           <td>Payment Id:</td>
-          <td> <code>xyz789</code> </td>
+          <td> <code>{{result.paymentId}}</code> </td>
         </tr>
         <tr>
           <td>Total:</td>
-          <td> <code>$12.00</code> </td>
+          <td> $<code>{{result.total}}</code> </td>
         </tr>
       </tbody>
     </table>
