--- a/csf_assessment_template/client/src/app/components/place-order.component.html
+++ b/csf_assessment_template/client/src/app/components/place-order.component.html
@@ -4,38 +4,38 @@
   </div>
 </div>
 
-<form>
+<form [formGroup]="form" (submit)="submit()">
   <div class="row mb-2">
     <div class="col">
       <label for="username" class="form-label">Username</label>
-      <input type="text" id="username" class="form-control" placeholder="Registered username">
+      <input type="text" id="username" class="form-control" placeholder="Registered username" formControlName="username">
     </div>
   </div>
   <div class="row mb-2">
     <div class="col">
       <label for="password" class="form-label">Password</label>
-      <input type="password" id="password" class="form-control" placeholder="Valid password">
+      <input type="password" id="password" class="form-control" placeholder="Valid password" formControlName="password">
     </div>
   </div>
   <div class="row mb-5">
     <div class="col">
       <div class="d-flex justify-content-between">
-        <button type="button" class="btn btn-danger">
+        <button type="button" class="btn btn-danger" (click)="reset()">
           Start Over
         </button>
-        <button type="submit" class="btn btn-primary">Confirm</button>
+        <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Confirm</button>
       </div>
     </div>
   </div>
 </form>
 
-<div class="row mb-2">
+<div class="row mb-2" >
   <div class="col">
     <h2>Your Order</h2>
   </div>
 </div>
 <div class="row">
-  <div class="col">
+  <div class="col" >
     <table class="table table-striped">
       <thead>
         <tr>
@@ -46,19 +46,19 @@
           <th></th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td> 1 </td>
-          <td> XXX </td>
-          <td> $10 </td>
-          <td> XXX </td>
-          <td> $10 </td>
-        </tr>
-      </tbody>
+            <tbody>
+              <tr *ngFor="let order of cart">
+                <td></td>
+                <td> {{order.name}} </td>
+                <td> ${{order.price.toFixed(2)}} </td>
+                <td> {{order.quantity}}</td>
+                <td> ${{order.total.toFixed(2)}} </td>
+              </tr>
+            </tbody>
       <tfoot>
         <tr>
           <td colspan="4"></td>
-          <td> $10 </td>
+          <td> $<span>{{totalPrice$ | async }}</span> </td>
         </tr>
       </tfoot>
 
